--- a/Transceiver52M/Makefile.am
+++ b/Transceiver52M/Makefile.am
@@ -54,6 +54,7 @@ COMMON_SOURCES = \
 	radioClock.cpp \
 	sigProcLib.cpp \
 	Transceiver.cpp \
+	PAController.cpp \
 	DummyLoad.cpp \
 	convolve.c \
 	convert.c
@@ -76,6 +77,7 @@ noinst_HEADERS = \
 	radioDevice.h \
 	sigProcLib.h \
 	Transceiver.h \
+	PAController.h \
 	USRPDevice.h \
 	DummyLoad.h \
 	rcvLPF_651.h \
