--- a/TransceiverRAD1/Makefile.am
+++ b/TransceiverRAD1/Makefile.am
@@ -23,7 +23,7 @@ include $(top_srcdir)/Makefile.common
 DESTDIR := 
 
 AM_CPPFLAGS = $(STD_DEFINES_AND_INCLUDES) $(USB_INCLUDES) $(WITH_INCLUDES)
-AM_CXXFLAGS = -DOMNITHREAD_POSIX=1 -lusb-1.0 -ldl -lpthread -lxmlrpc++ -lxmlrpc_xmlparse -lxmlrpc_xmltok -lxmlrpc_server -lxmlrpc_util -lxmlrpc_server++ -lxmlrpc_server_abyss -lxmlrpc_server_abyss++
+AM_CXXFLAGS = -DOMNITHREAD_POSIX=1 -lusb-1.0 -ldl -lpthread -L/usr/lib   -lxmlrpc_server_abyss++ -lxmlrpc_server++ -lxmlrpc_server_abyss -lxmlrpc_server -lxmlrpc_abyss  -lpthread -lxmlrpc++ -lxmlrpc -lxmlrpc_util -lxmlrpc_xmlparse -lxmlrpc_xmltok 
 
 
 EXTRA_DIST = \
