--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "CommonLibs"]
 	path = CommonLibs
-	url = git@github.com:kheimerl/CommonLibs.git
+	url = git@github.com:endaga/CommonLibs.git
 	branch = berkeley-power
 [submodule "sqlite3"]
 	path = sqlite3
