Fixes log rotation and removes execute permissions from plain text config files

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -82,15 +82,14 @@ install: OpenBTS OpenBTSCLI
 	install OpenBTS "$(DESTDIR)/OpenBTS/"
 	install OpenBTSCLI "$(DESTDIR)/OpenBTS/"
 	install OpenBTSDo "$(DESTDIR)/OpenBTS/"
-	chmod +x "$(DESTDIR)/OpenBTS/OpenBTSDo"
-	install .gdbinit "$(DESTDIR)/OpenBTS/"
+	install -m 644 .gdbinit "$(DESTDIR)/OpenBTS/"
 	mkdir -p "$(DESTDIR)/etc/supervisor/conf.d/"
-	install openbts.conf "$(DESTDIR)/etc/supervisor/conf.d/"
+	install -m 644 openbts.conf "$(DESTDIR)/etc/supervisor/conf.d/"
 	mkdir -p "$(DESTDIR)/etc/OpenBTS/"
-	install iptables.rules "$(DESTDIR)/etc/OpenBTS/"
-	install OpenBTS.example.sql "$(DESTDIR)/etc/OpenBTS/"
+	install -m 644 iptables.rules "$(DESTDIR)/etc/OpenBTS/"
+	install -m 644 OpenBTS.example.sql "$(DESTDIR)/etc/OpenBTS/"
 	mkdir -p "$(DESTDIR)/etc/rsyslog.d/"
 	mkdir -p "$(DESTDIR)/etc/logrotate.d/"
-	install rsyslogd.OpenBTS.conf "$(DESTDIR)/etc/rsyslog.d/OpenBTS.conf"
-	install logrotated.OpenBTS "$(DESTDIR)/etc/logrotate.d/OpenBTS"
+	install -m 644 rsyslogd.OpenBTS.conf "$(DESTDIR)/etc/rsyslog.d/OpenBTS.conf"
+	install -m 644 logrotated.OpenBTS "$(DESTDIR)/etc/logrotate.d/OpenBTS"
 
